<resources>
    <string name="app_name">DriverMonitor</string>


    <string name="title_start">Start</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_graphs">Graph</string>
    <string name="title_info">Information</string>
    <string name="title_home">Home</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_SignIn">Sign In</string>
    <string name="title_activity_login">Log in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="checkBox1">No leaks under vehicle.</string>
    <string name="checkBox2">Vehicle sitting square and not leaning to one side.</string>
    <string name="checkBox3">Wheels in good condition, secure and wheelnuts tight.</string>
    <string name="checkBox4">Tyres undamaged with correct inflation and tread depth.</string>
    <string name="checkBox5">Good visibility for driver through all windows and mirrors.</string>
    <string name="checkBox6">Engine oil, water/coolant, windscreen washer reservoir and fuel levels</string>
    <string name="checkBox7">Fuel cap in place and exhaust secure with no excessive noise or smoke.</string>
    <string name="checkBox8">Tax, insurance and NCT/MOT discs present and valid.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="names">
        <item>Last 7 Trips</item>
        <item>Past 30 Trips</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_fragment_info">Tap Start before you begin driving!</string>
    <string name="app_info_title">About The Project</string>
    <string name="app_info">As technology grows and becomes more prevalent in our everyday lives, we are finding more and more ways to introduce technology to aid in practical everyday situations. Driving is an activity most people engage in daily and is the most likely cause of death for people between the ages of 18-24. It seems that people don’t take necessary precautions when it comes to driving. This project provides a practical technological solution to the issue of unsafe/ dangerous driving.</string>
</resources>
