<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckList">
    
    <CheckBox
        android:id="@+id/check_box1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/rule1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/check_box1"
        android:text = "@string/checkBox1"
        android:textSize = "24sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/check_box2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/check_box1"/>

    <TextView
        android:id="@+id/rule2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/check_box2"
        android:layout_below="@+id/rule1"
        android:text = "@string/checkBox2"
        android:textSize = "24sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/check_box3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rule2"/>

    <TextView
        android:id="@+id/rule3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/check_box3"
        android:layout_below="@+id/rule2"
        android:text = "@string/checkBox3"
        android:textSize = "24sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/check_box4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rule3"/>

    <TextView
        android:id="@+id/rule4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/check_box4"
        android:layout_below="@+id/rule3"
        android:text = "@string/checkBox4"
        android:textSize = "24sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/check_box5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rule4"/>

    <TextView
        android:id="@+id/rule5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/check_box5"
        android:layout_below="@+id/rule4"
        android:text = "@string/checkBox5"
        android:textSize = "24sp"
        android:textStyle="bold"/>


    <CheckBox
        android:id="@+id/check_box6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rule5"/>

    <TextView
        android:id="@+id/rule6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/check_box6"
        android:layout_below="@+id/rule5"
        android:text = "@string/checkBox6"
        android:textSize = "24sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/check_box7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rule6"/>

    <TextView
        android:id="@+id/rule7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/check_box7"
        android:layout_below="@+id/rule6"
        android:text = "@string/checkBox7"
        android:textSize = "24sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/check_box8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rule7"/>

    <TextView
        android:id="@+id/rule8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/check_box8"
        android:layout_below="@+id/rule7"
        android:text = "@string/checkBox8"
        android:textSize = "24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/the_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:layout_alignParentBottom="true" />

</RelativeLayout>